# africa-tb-atlas

./: .gitignore  .preregistration_commit.txt  README.md  atlas_baseline.csv  index.html  paths.toml.example  push.sh  pyproject.toml
dashboard/: index.html
data/: cochrane_tb_refs.parquet
data/snapshots/: aact_metadata.json  cdsr_metadata.json  ictrp_metadata.json  internet_archive_pages.json  internet_archive_prereg.json  internet_archive_v0.1.0.json  output_baselines.json  (+4 more)
docs/: AMENDMENTS.md  extraction_audit.md  protocol.md  spec.md
e156-submission/: body.md  body.template.md  synthesis-methods-note.md
pilots/: preflight.py  run_all.py
scripts/: build_fixtures.py  build_snapshot_metadata.py  fill_paper_placeholders.py  install_sentinel_hook.sh  make_spotcheck_template.py  merge_spotcheck.py  release_v010.sh  stamp_file.py  validate_e156_body.py  validate_synthesis_note.py  validation_gates.py  verify_prereg.py
tests/: test_aact_loader.py  test_africa_classifier.py  test_atlas_baseline.py  test_cochrane_match.py  test_condition_filter.py  test_config.py  test_dashboard_static.py  test_date_filter.py  test_drug_class_taxonomy.py  test_funnel.py  test_ictrp_loader.py  test_integration_fixtures.py  test_intervention_filter.py  test_nct_bridge.py  test_paper_fill.py  test_phase0_smoke.py  test_pipeline_integration.py  test_population_filter.py  test_population_pipeline.py  test_preflight.py  test_publication_match.py  test_release_v010.py  test_results_posting.py  test_spotcheck.py  test_trial_dedup.py  test_validation_gates.py  test_verify_prereg.py
(+32 files in other folders)
