[project]
name = "tb-atlas"
version = "0.0.1"
description = "African TB Trial Atlas — Cochrane-inclusion gap audit for modern MDR/XDR-TB regimens"
requires-python = ">=3.13"
license = { text = "MIT" }
dependencies = [
    "pandas>=2.2",
    "pyarrow>=16.0",
    "requests>=2.32",
    "tomli>=2.0;python_version<'3.11'",
    "iso3166>=2.1",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov>=5.0"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --strict-markers"
